--- a/DELIVERY.HTML
+++ b/DELIVERY.HTML
@@ -18,13 +18,13 @@
 
     <div class="main">
         <ul>
-            <li><a href="WEBSITE.HTML">Home</a></li>
-            <li><a href="WEBSITE.HTML">About Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">About Us</a></li>
             <li><a href="MENUS.HTML">Menus</a></li>
             <li><a href="RESERVATION.HTML">Reservation Form</a></li>
             <li><a href="DELIVERY.HTML">Delivery Services</a></li>
-            <li><a href="WEBSITE.HTML">Contact Us</a></li>
-            <li><a href="WEBSITE.HTML">Reviews</a></li>
+            <li><a href="index.html">Contact Us</a></li>
+            <li><a href="index.html">Reviews</a></li>
         </ul>
     </div>
 </nav>
