--- a/MENUS.HTML
+++ b/MENUS.HTML
@@ -6,25 +6,25 @@
     </head>
 
     <body>
-        <nav class="nav">
+        <nav id="sect2" class="nav">
             <div class="title">
                 <div>
                     <a href="#sect2">
                         <img class="logo1" src="LOGO BUSINESS TRY.png" alt="LOGO">
                     </a>
                 </div>
-                <a id="sect2" class="titletext">TASTY-P-FEAST</a>
+                <a class="titletext">TASTY-P-FEAST</a>
             </div>
-    
+        
             <div class="main">
                 <ul>
-                    <li><a href="WEBSITE.HTML">Home</a></li>
-                    <li><a href="WEBSITE.HTML">About Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">About Us</a></li>
                     <li><a href="MENUS.HTML">Menus</a></li>
                     <li><a href="RESERVATION.HTML">Reservation Form</a></li>
                     <li><a href="DELIVERY.HTML">Delivery Services</a></li>
-                    <li><a href="WEBSITE.HTML">Contact Us</a></li>
-                    <li><a href="WEBSITE.HTML">Reviews</a></li>
+                    <li><a href="index.html">Contact Us</a></li>
+                    <li><a href="index.html">Reviews</a></li>
                 </ul>
             </div>
         </nav>
