--- a/DELIVERY.HTML
+++ b/DELIVERY.HTML
@@ -29,7 +29,7 @@
     </div>
 </nav>
 
-<br>
+
 <section><br>
     <div class="scroll-container">
         <div class="tagline1" style="color: yellow;">Menus:</div>
@@ -149,8 +149,8 @@
 <form action="https://formsubmit.co/arvinjacaba1590@gmail.com" method="POST">
     <br>
     <div class="backgroundform">    
-        <br><br>
-        <b class="fill_up">Please fill-up the following fields: </b> <br><br>
+        <br>
+        <div class="fill_up">Please fill-up the following fields: </div> <br>
         
         <div class="client">
             <label for="firstName">First Name:</label>
@@ -199,7 +199,7 @@
                 <input type="checkbox" name="adds">Heineken<br>
             </div>
 
-        <div class="comments">Comments and Suggestions:</div>
+        <div class="Order">Comments and Suggestions:</div>
         <div class="e_comments">
             <textarea rows="10" cols="50" placeholder="Please Enter Your Comments here. (CONCERNS AND ALSO HOW MANY PIECES.)"></textarea>
         </div>
