--- a/MENUS.HTML
+++ b/MENUS.HTML
@@ -28,12 +28,13 @@
                 </ul>
             </div>
         </nav>
-        <br>
+        
         <div class="tagl">
-            <br>
-            <div class="tagline">"Savor the Essence of Delicious Delights at Tasty-P-Feast: </div>
-            <div class="tagline">Where Every Bite is a Symphony of Taste!" </div>
-            <br>
+            <div class="taglinee">
+        <section>
+            <p class="tagline3">"Savor the Essence of Delicious Delights at Tasty-P-Feast: </p>
+            <p class="tagline2">Where Every Bite is a Symphony of Taste!" </p>
+        </section>
             <div class="tagline1" style="color: yellow;">Menus:</div>
             <div class="tagline">Filipino style Adobo, Lumpiang Shanghai, Sisig, Sinigang,</div>
             <div class="tagline">Kare-kare, Pancit Palabok, Spaghetti</div>
