--- a/RESERVATION.HTML
+++ b/RESERVATION.HTML
@@ -29,8 +29,8 @@
         </div>
     </nav>
 
-<br><br>
-<section id="tables"><br>
+<br>
+<section id="tables">
     <h2 class="available-text">Available Tables</h2>
     <div class="scrollable">
         <div class="table-item">
@@ -38,7 +38,7 @@
                 <img src="TABLE1 WITH BED.jpg" alt="Table 1">
             </div>
             <div class="table-div">
-                <div class="table-title">Table 1: Couple with small bed</div>
+                <div class="table-title">Table 1: Couple w/ small bed</div>
                 <div class="table-price">Price: P650.00</div>
             </div>
         </div>
@@ -48,7 +48,7 @@
                 <img src="TABLE2 WITH POOL.jpg" alt="Table 2">
             </div>
             <div class="table-div">
-                <div class="table-title">Table 2: 8 people with billiard pool rent</div>
+                <div class="table-title">Table 2: 8 people w/ billiard pool rent</div>
                 <div class="table-price">Price: P1000.00</div>
             </div>
         </div>
@@ -58,7 +58,7 @@
                 <img src="TABLE3 WITH KARAOKE.png" alt="Table 3">
             </div>
             <div class="table-div">
-                <div class="table-title">Table 3: 12 people with karaoke</div>
+                <div class="table-title">Table 3: 12 people w/ karaoke</div>
                 <div class="table-price">Price: P1200.00</div>
             </div>
         </div>
@@ -68,7 +68,7 @@
                 <img src="TABLE4 WITH BOARDGAMES.webp" alt="Table 4">
             </div>
             <div class="table-div">
-                <div class="table-title">Table 4: 8 people with board/card games</div>
+                <div class="table-title">Table 4: 8 people w/ board/card games</div>
                 <div class="table-price">Price: P750.00</div>
             </div>
         </div>
@@ -78,7 +78,7 @@
                 <img src="TABLE5 WITH BOARDGAMES2.jpg" alt="Table 5">
             </div>
             <div class="table-div">
-                <div class="table-title">Table 5: 15 people with board/card games</div>
+                <div class="table-title">Table 5: 15 people w/ board/card games</div>
                 <div class="table-price">Price: P1000.00</div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                 <img src="SEMI-PARTY-TABLE.jpeg" alt="Semi-Party Table">
             </div>
             <div class="table-div">
-                <div class="table-title">Semi-Party Table: Semi-party table: (discounted) party with karaoke</div>
+                <div class="table-title">Semi-Party Table: (discounted) party w/ karaoke</div>
                 <div class="table-price">Price: P3000.00</div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                 <img src="PARTY TABLE.jpg" alt="Party Table">
             </div>
             <div class="table-div">
-                <div class="table-title">Party Table: big party with free 2 plates of menu and karaoke</div>
+                <div class="table-title">Party Table: w/ free 2 plates of menu & karaoke</div>
                 <div class="table-price">Price: P.5000.00</div>
             </div>
         </div>
@@ -108,7 +108,7 @@
                 <img src="VIP1.avif" alt="VIP 1 Table">
             </div>
             <div class="table-div">
-                <div class="table-title">VIP 1: 8 people with karaoke and free 1 set of beer/champagne</div>
+                <div class="table-title">VIP 1: 8 people w/ karaoke & free 1 set of any drinks</div>
                 <div class="table-price">Price: P1500.00 + VIP Card</div>
             </div>
         </div>
@@ -118,7 +118,7 @@
                 <img src="VIP2.avif" alt="VIP 2 Table">
             </div>
             <div class="table-div">
-                <div class="table-title">VIP 2: 16 people and free 2 sets of beer/champagne/wine</div>
+                <div class="table-title">VIP 2: 16 people w/ karaoke & free 2 set of any alcohol drinks</div>
                 <div class="table-price">Price: P2000.00 + VIP Card</div>
             </div>
         </div>
@@ -140,8 +140,8 @@
 <form action="https://formsubmit.co/arvinjacaba1590@gmail.com" method="POST">
     <br>
     <div class="backgroundform">    
-        <br><br>
-        <b class="fill_up">Please fill-up the following fields: </b> <br><br>
+        
+        <div class="fill_up">Please fill-up the following fields: </div>
         
         <div class="client">
             <label for="firstName">First Name:</label>
