--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             </div>
         </nav>        
         
-        <br>
         <div class="tagl">
-            <br>
-        <div class="tagline">"Savor the Essence of Delicious Delights at Tasty-P-Feast: </div>
-        <div class="tagline">Where Every Bite is a Symphony of Taste!" </div>
-        <br>
-            
+            <div class="tagline">
+        <section>
+            <p class="tagline1">"Savor the Essence of Delicious Delights at Tasty-P-Feast: </p>
+            <p class="tagline2">Where Every Bite is a Symphony of Taste!" </p>
+        </section>
+            </section>
         <section>
             <div class="scroll-container">
                 <div class="menu-item">
@@ -159,7 +159,7 @@
         <div>
             <div id="sect1" class="about1">
             <h4 class="about">About Us</h4><br>
-            <p class="text">
+            <div class="text">
                 TastyPFeast is all about dishes in the Philippines
                 mostly are famous for their savory, juicy and delicious delicasies.
                 Each region in the Philippines has its specialties, reflecting 
@@ -179,11 +179,12 @@
                 of sweet, salty, sour, and savory flavors, showcasing the 
                 Philippines' rich cultural eating at our restaurant gives customers
                 the joy, interactions and even bring family together in a whole, 
-                so what are you waiting for, Reserve or Order now!!</p>
+                so what are you waiting for, Reserve or Order now!!
+            </div>
                 <br>
                 <img class="aboutuslogo" src="LOGO BUSINESS TRY.png">
                 <br>
-                <h4 class="about">Vision:</h4><br> <p class="text">
+                <h4 class="about">Vision:</h4><br> <div class="text">
                 "To be the ultimate destination for Filipino cuisine, 
                 delighting customers with exceptionally delicious and 
                 savory food that showcases the richness of our culinary
@@ -200,9 +201,10 @@
                     quality, creativity, and sustainability, we seek to 
                     elevate Filipino cuisine onto the global stage, 
                     sharing our heritage with the world while preserving 
-                    its authenticity for generations to come."</p><br>
+                    its authenticity for generations to come."</div><br>
 
-                <h4 class="about">Mission:</h4><br> <p class="text">
+                <h4 class="about">Mission:</h4><br> 
+                <div class="text">
                     "We are dedicated to providing an unparalleled dining
                      experience by crafting mouthwatering Filipino dishes
                       with precision and care. Our mission is to satisfy 
@@ -223,7 +225,7 @@
                         communities we serve, promoting local 
                         ingredients, supporting Filipino artisans,
                          and sharing our love for Filipino food through 
-                         meaningful engagement and partnerships."</p>
+                         meaningful engagement and partnerships."</div>
                 <br>
                 <div class="homeabout1">
                 <ul><li><a href="#sect2" > Back to home </a></div></li></ul>
