--- a/DELIVERY.HTML
+++ b/DELIVERY.HTML
@@ -146,7 +146,7 @@
         
     </div>
 
-<form action="https://formsubmit.co/arvinjacaba1590@gmail.com" method="POST">
+<form action="https://api.web3forms.com/submit" method="POST">
     <br>
     <div class="backgroundform">    
         <br>
@@ -201,10 +201,12 @@
 
         <div class="Order">Comments and Suggestions:</div>
         <div class="e_comments">
-            <textarea rows="10" cols="50" placeholder="Please Enter Your Comments here. (CONCERNS AND ALSO HOW MANY PIECES.)"></textarea>
+            <textarea rows="10" cols="50" placeholder="Please Enter Your Comments here. 
+List down your order and how many PIECES. Sorry for the inconvenient, Thank you!!(CONCERNS AND ALSO HOW MANY PIECES.)"></textarea>
         </div>
 
         <div class="button-container">
+            <input type="hidden" name="access_key" value="1762f407-3bcf-494e-9da1-835bfd9e7c1a">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_template" value="table">
             <input class="reset" type="reset" value="Reset">
