--- a/RESERVATION.HTML
+++ b/RESERVATION.HTML
@@ -137,7 +137,7 @@
     
 </section>
 
-<form action="https://formsubmit.co/arvinjacaba1590@gmail.com" method="POST">
+<form action="https://api.web3forms.com/submit" method="POST">
     <br>
     <div class="backgroundform">    
         
@@ -190,6 +190,7 @@
         </div>
 
         <div class="button-container">
+            <input type="hidden" name="access_key" value="1762f407-3bcf-494e-9da1-835bfd9e7c1a">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_template" value="table">
             <input class="reset" type="reset" value="Reset">
