--- a/RESERVATION.HTML
+++ b/RESERVATION.HTML
@@ -184,15 +184,17 @@
             <option>Budget: Sit at the vacant chair for 1 person</option>
         </select>
 
-        <div class="comments">Comments and Suggestions:</div>
-        <div class="e_comments">
-            <textarea name="Comments" rows="10" cols="50" placeholder="Please Enter Your Comments here. (CONCERNS)"></textarea>
+        <div class="Order">Comments and Suggestions:</div>
+        <div class="client">
+            <div class="e_comments">
+                <label for="List and Pieces">List and Pieces:</label>
+                <textarea type="text" name="List and Pieces" required rows="10" cols="50" placeholder="Please Enter Your Comments here. 
+List down your order and how many pieces of order. Sorry for the inconvenient, Thank you!!(CONCERNS AND ALSO HOW MANY PIECES.)"></textarea>
+            </div>
         </div>
 
         <div class="button-container">
             <input type="hidden" name="access_key" value="1762f407-3bcf-494e-9da1-835bfd9e7c1a">
-            <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_template" value="table">
             <input class="reset" type="reset" value="Reset">
             <input class="submit" type="submit" value="Reserve">
         </div>
