--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 
                 <div class="menu-item">
                     <div class="image-container">
+                        <img src="1MENUPAPAITAN.jpg" alt="HEINEKEN">
+                    </div>
+                    <div class="menu-title">Papaitan</div>
+                </div>
+
+                <div class="menu-item">
+                    <div class="image-container">
                         <img src="1MENUPANCIT.png" alt="Pancit Palabok">
                     </div>
                     <div class="menu-title">Pancit Palabok</div>
@@ -139,6 +146,13 @@
 
                 <div class="menu-item">
                     <div class="image-container">
+                        <img src="1MENUTANDUAY.jpg" alt="HEINEKEN">
+                    </div>
+                    <div class="menu-title">Tanduay</div>
+                </div>
+
+                <div class="menu-item">
+                    <div class="image-container">
                         <img src="1MENUSANMIGFLAVORED.png" alt="SANMIG FLAVORED">
                     </div>
                     <div class="menu-title">San Mig Flavored</div>
@@ -149,6 +163,13 @@
                         <img src="1MENUHEINEKEN.jpg" alt="HEINEKEN">
                     </div>
                     <div class="menu-title">Heineken</div>
+                </div>
+
+                <div class="menu-item">
+                    <div class="image-container">
+                        <img src="1MENUTHEBAR.jpg" alt="HEINEKEN">
+                    </div>
+                    <div class="menu-title">The Bar Gin</div>
                 </div>
                 
             </div>
